// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermitPost gas: transfer ERC20 into Uniswap Pair nonce 1 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 72791,
}
`;

exports[`PermitPost gas: transfer ERC20 into router nonce 0 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 106991,
}
`;
